test/libyul/yulSyntaxTests/function_definition_whitespace.yul
{
    function f (a, b  , c ) -     >    y,x,z {
    }
}
// ----
// ParserError 2314: (30-31): Expected '{' but got '-'
